--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/header.css"    />
     <link rel="stylesheet" href="./styles/section.css"   />
     <link rel="stylesheet" href="./styles/footer.css"    />
+    
     <link rel="stylesheet" href="./styles/responsive.css"/>
     <link rel="stylesheet" href="./styles/root.css"      />
     <link rel="stylesheet" href="./styles/default.css"   />
@@ -80,7 +81,8 @@
                         
                         <h2><b>DCC Laboratório CAD</b></h2>
                         <br/>
-                        Contato: dcccad@gmail.com
+                        Contato: dcccad@gmail.com &nbsp;
+                        dcclabcad@gmail.com
                         <br/>
                         Telefone: (11) 3322-2273
                         <br/>
