--- a/reservas.html
+++ b/reservas.html
@@ -63,7 +63,7 @@
 <main>
     <section class="conteudo-main">
         <div class="section-center">
-            <form class="reserva-cad" name="Reserva-Laboratorio" action="https://formsubmit.co/b092a3476a9e1d898ccfc6c73c4a1ef7" method="POST">
+            <form class="reserva-cad" name="Reserva-Laboratorio" action="https://formsubmit.co/b092a3476a9e1d898ccfc6c73c4a1ef7" method="POST" netlify>
                 <h2 class="titulo-informativo">Reversa Laboratorio</h2>
                 <label for="curso">Curso/Disciplina *</label>
                 <input type="text" name="Curso_Disciplina" id="curso" placeholder="Ex: Desenhos de Construção Civil" required>
