--- a/disciplinas.html
+++ b/disciplinas.html
@@ -64,7 +64,21 @@
     <main>
         <section class="conteudo-main">
             <div class="section-center">
+                <div>
+                    <button type="button">Manhã</button>
+                    <button type="button">DCC I - CAD</button>
+                    <button type="button">DCC II - APROV</button>
+                    <button type="button">DCC III - EXEC</button>
+                    <button type="button">DCC IV - MAQ</button>
+                    <button type="button">IAPV</button>
+                </div>
+                <div>
+                    <button type="button">Tarde</button>
+                </div>
+                <div>
+                    <button type="button">Noite</button>
 
+                </div>
             </div>
         </section>
     </main>
