--- a/formulario.html
+++ b/formulario.html
@@ -23,9 +23,7 @@
             width: 70%;*/
         }
         
-        fieldset {
-            border: 3px solid dodgerblue
-        }
+        fieldset { border: 3px solid dodgerblue }
         legend { z-index: 1;
             position: relative;
             background-color: dodgerblue;
@@ -33,9 +31,7 @@
             padding: 10px;
             /*text-align: center;*/
             border-radius: 8px;
-        }.inputBox {
-            position: relative;
-        }
+        }.inputBox { position: relative; }
         .inputReserva {
             background: none; border: none;
             border-bottom: 1px solid white;
@@ -51,15 +47,12 @@
             left: 0px;
             pointer-events: none;
             transition: .5s;
-        }#file {
-            margin-top: 5px;
-        }
+        }#file { margin-top: 5px; }
         .inputReserva:focus ~ .labelInput,
         .inputReserva:valid ~.labelInput {
             top: -20px;
             font-size: 12px;
-            color: dodgerblue;
-            
+            color: dodgerblue;   
         }
     </style>
 </head>
@@ -132,7 +125,7 @@
 
                 <p id="adendo-forms">Caso precise de uma monitoria durante o uso do laboratório escreva aqui...</p>
                 <div class="inputBox messageArea">
-                    <textarea name="Message" class="textareaReserva" id="solicitacoes" wrap="hard" placeholder="Diga-me o seu pedido..."></textarea>
+                    <textarea name="Message" class="textareaReserva" id=""  wrap="hard" placeholder="Diga-me o seu pedido..."></textarea>
                     <label for="solicitacoes" class="labelTextarea">Campo para solicitar algum Pedido/Item</label>
 
                 </div>
