--- a/links.html
+++ b/links.html
@@ -64,8 +64,18 @@
     <main>
         <section class="conteudo-main">
             <div class="section-center">
-
-            </div>
+                <h2 style="font-weight: 600; font-family:cursive">Links</h2>
+                <div class="links" style="display: flex">
+                    <div class="video-cad">
+                        <br />
+                        <p>Tutorial de instalação do Auto CAD</p>
+                        <iframe src="https://www.youtube.com/embed/acZ2LRt5oGU" frameborder="0" width="520" height="315"></iframe>
+                    </div><!-- class: video-cad -->
+                    <div class="autodesk">
+                        <button type="button"><img src="./images/AutoDesk.png" alt="Auto Desk" width="200" height="160"></button>
+                    </div>
+                </div><!-- class: links -->
+            </div><!-- class: section-center -->
         </section>
     </main>
 
