--- a/teachersWork.html
+++ b/teachersWork.html
@@ -64,7 +64,22 @@
     <main>
         <section class="conteudo-main">
             <div class="section-center">
-
+                <button type="button" class="professores">
+                    Profª. Dra. Ana Lúcia Saad
+                </button>
+                <!--<button type="button" class="professores">ProfºEduardo Abbud Filho</button>-->
+                <button type="button" class="professores">
+                    Profª. Lis Eulália Cabrini da Silva
+                </button>
+                <button type="button" class="professores">
+                    Profº. José Francisco Toledo Melara
+                </button>
+                <button type="button" class="professores">
+                    Profª. Me. Ieda Maria Nolla
+                </button>
+                <button type="button" class="professores">
+                    Profª. Me. Helena Maria Barão Pereira de Mello
+                </button>
             </div>
         </section>
     </main>
