--- a/calendario.html
+++ b/calendario.html
@@ -63,8 +63,20 @@
     <!-- ****************** MAIN SECTION **********************-->
     <main>
         <section class="conteudo-main">
-            <div class="section-center">
-
+            <div class="section-center" style="align-items: center;">
+                <p style="color:chocolate; font-family: Arial, Helvetica, sans-serif;">
+                    Calendário 2° Semestre 2025
+                </p>
+                <img src="./images/Calendario_2SEM_2025.png" alt="Calendário Escolar" />
+                <p style="font-family: Arial, Helvetica, sans-serif;">
+                    Download calendário 1° Semestre 2025
+                </p>
+    <br />
+                <a href="https://www.fatecsp.br/paginas/CalendarioEscolar.pdf">
+                    <img src="./images/downloadPDF.png" alt="Download PDF" width="60" height="80" />
+                </a>
+    <br />
+    <br />
             </div>
         </section>
     </main>
