--- a/calendario.html
+++ b/calendario.html
@@ -72,7 +72,7 @@
                     Download calendário 1° Semestre 2025
                 </p>
     <br />
-                <a href="https://www.fatecsp.br/paginas/CalendarioEscolar.pdf">
+                <a href="https://www.fatecsp.br/paginas/CalendarioEscolar.pdf" target="_blank">
                     <img src="./images/downloadPDF.png" alt="Download PDF" width="60" height="80" />
                 </a>
     <br />
