--- a/atendimento.html
+++ b/atendimento.html
@@ -249,7 +249,7 @@
                 </div> <!-- class: footer-col -->
             </div><!-- class: display-footer3 -->
 
-            <div class="footer-col" id="footer-desenvolvedores2">
+            <div class="footer-col2" id="footer-desenvolvedores2">
                 <h2 class="h2-footer"><b>Desenvolvedores</b></h2>
                 <p class="p-footer">
 
