--- a/calendario.html
+++ b/calendario.html
@@ -64,15 +64,15 @@
     <main>
         <section class="conteudo-main">
             <div class="section-center" style="align-items: center;">
-                <p style="color:chocolate; font-family: Arial, Helvetica, sans-serif;">
+                <h2 style="color:chocolate; font-family: Arial, Helvetica, sans-serif; margin: 20px 0px 20px 0px;">
                     Calendário 2° Semestre 2025
-                </p>
+                </h2>
                 <img src="./images/Calendario_2SEM_2025.png" alt="Calendário Escolar" />
                 <p style="font-family: Arial, Helvetica, sans-serif;">
                     Download calendário 1° Semestre 2025
                 </p>
     <br />
-                <a href="https://www.fatecsp.br/paginas/CalendarioEscolar.pdf" target="_blank">
+                <a href="https://www.fatecsp.br/paginas/CalendarioEscolar.pdf">
                     <img src="./images/downloadPDF.png" alt="Download PDF" width="60" height="80" />
                 </a>
     <br />
