--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <div class="text-laboratorio">
-                <p>
+                <p class="text-carrosseul">
                     Localizado no Segundo andar do Bloco B o laboratório destina-se a apoiar didaticamente o ensino de Desenho de Construção Civil (DCC), e a outras disciplinas do curso de Edifícios e afins.
                         <br />
                      Constituído pelas salas 28-B, 29-B e 47-A, com capacidade para 20, 20 e 16 alunos, respectivamente.
@@ -238,7 +238,7 @@
                 </div> <!-- class: footer-col -->
             </div><!-- class: display-footer3 -->
 
-            <div class="footer-col" id="footer-desenvolvedores2">
+            <div class="footer-col2" id="footer-desenvolvedores2">
                 <h2 class="h2-footer"><b>Desenvolvedores</b></h2>
                 <p class="p-footer">
 
