--- a/links.html
+++ b/links.html
@@ -72,9 +72,13 @@
                         <iframe src="https://www.youtube.com/embed/acZ2LRt5oGU" frameborder="0" width="520" height="315"></iframe>
                     </div><!-- class: video-cad -->
                     <div class="autodesk">
-                        <button type="button"><img src="./images/AutoDesk.png" alt="Auto Desk" width="200" height="160"></button>
+                        <a href="./autodesk_educacional.html" target="_blank"><img src="./images/AutoDesk.png" alt="Auto Desk" width="200" height="160"></a>
                     </div>
                 </div><!-- class: links -->
+                <div class="prefeituraSP">
+                    <h2>Sites para consulta da Prefeitura de São Paulo</h2>
+                </div>
+
             </div><!-- class: section-center -->
         </section>
     </main>
@@ -154,7 +158,7 @@
                 </div> <!-- class: footer-col -->
             </div><!-- class: display-footer3 -->
 
-            <div class="footer-col" id="footer-desenvolvedores2">
+            <div class="footer-col2" id="footer-desenvolvedores2">
                 <h2 class="h2-footer"><b>Desenvolvedores</b></h2>
                 <p class="p-footer">
 
