Implemento da tag Netlify formulário - atendimento.html
Envio de formulário pela Netlify

--- a/atendimento.html
+++ b/atendimento.html
@@ -139,7 +139,7 @@
         <section class="conteudo-main">
             <div class="section-center">
                 <div class="box">
-                    <form class="atendimento-cad" name="Reserva-Laboratorio" action="https://formsubmit.co/b092a3476a9e1d898ccfc6c73c4a1ef7" method="POST" enctype="multipart/form-data">
+                    <form class="atendimento-cad" name="Reserva-Laboratorio" action="https://formsubmit.co/b092a3476a9e1d898ccfc6c73c4a1ef7" method="POST" enctype="multipart/form-data" data-Netlify="true">
                         <fieldset>
                             <legend><b>Fale Conosco</b></legend>
                             <p>Fale conosco para sugestões ou  reclamações.
