--- a/calendario.html
+++ b/calendario.html
@@ -63,16 +63,16 @@
     <!-- ****************** MAIN SECTION **********************-->
     <main>
         <section class="conteudo-main">
-            <div class="section-center" style="align-items: center;">
-                <h2 style="color:chocolate; font-family: Arial, Helvetica, sans-serif; margin: 20px 0px 20px 0px;">
+            <div class="section-center section-center-calendario" style="align-items: center;">
+                <h2 id="h2-calendario-semestre">
                     Calendário 2° Semestre 2025
                 </h2>
-                <img src="./images/Calendario_2SEM_2025.png" alt="Calendário Escolar" />
-                <p style="font-family: Arial, Helvetica, sans-serif;">
+                <img id="img-calendario-semestre" src="./images/Calendario_2SEM_2025.png" alt="Calendário Escolar" />
+                <p class="p-calendario-semestre" style="">
                     Download calendário 1° Semestre 2025
                 </p>
     <br />
-                <a href="https://www.fatecsp.br/paginas/CalendarioEscolar.pdf">
+                <a href="https://www.fatecsp.br/paginas/CalendarioEscolar.pdf" target="_blank">
                     <img src="./images/downloadPDF.png" alt="Download PDF" width="60" height="80" />
                 </a>
     <br />
