--- a/download.html
+++ b/download.html
@@ -78,16 +78,16 @@
                             <br />
                         &nbsp; 1- A seguinte pagina se abrira ao clicar no link acima, clique no software desejado. Nas disciplinas de DCC utilizamos o AutoCAD, apenas na versão básica:
                             <br />
-                        <img src="./images/AutoDesk.png" alt="Auto Desk" width="80" height="80" />
+                        <img src="./images/passo1-software_gratuito.avif" alt="passo1-software_gratuito" />
                         &nbsp; 2- Será necessário se cadastrar como estudante, para isso, clique em “Create Account”:
                             <br />
-                        <img src="./images/AutoDesk.png" alt="Auto Desk" width="80" height="80" />
+                        <img src="./images/passo2-autodesk_autocad.avif" alt="passo2-autodesk_autocad" />
                             &nbsp; 3- Preencha os campos com os seus dados. Depois de preenchido será necessário confirmar o cadastro através do seu e-mail:
                             <br />
-                        <img src="./images/AutoDesk.png" alt="Auto Desk" width="80" height="80" />
+                        <img src="./images/passo3-Education_Benefits.avif" alt="passo3-Education_Benefits" />
                         &nbsp; 4- Depois de confirmado o e-mail, basta fazer log-in no site e selecionar a versão do software, a versão do Windows e o idioma:
                             <br />
-                        <img src="./images/AutoDesk.png" alt="Auto Desk" width="80" height="80" />
+                        <img src="./images/passo4-autodesk_install.avif" alt="passo4-autodesk_install" />
                         &nbsp; 5- Após definir a versão, clique em “install now” para iniciar o download. Após o download, basta abrir o programa e iniciar a instalação.
                             <br />
                         &nbsp; Obs.: Nessa mesma página está o número da serial e a chave de produto, eles serão necessários para a ativação do produto posteriormente, esses números serão enviados para o e-mail cadastrado também, assim é possível recuperar a serial em caso de perda.
@@ -96,12 +96,12 @@
                     <br />
                     <p style="color:chocolate;">Download Software</p>
                     <p> Para fazer o download do Software
-                        <a href="./download.html">clique aqui</a>
+                        <a href="https://www.autodesk.com/br/education/home" target="_blank">clique aqui</a>
                         e siga as instruções.
                     </p>
                     <br />
                     <div class="img-autodesk" style="align-items: center; width: 100%;">
-                        <img src="./images/AutoDesk.png" alt="Auto Desk" width="80" height="80" />
+                        <img src="./images/AutoDesk.png" alt="Auto Desk" />
                     </div>
                 </div><!-- class: video-cad -->
             </div><!-- class: links -->
