--- a/links.html
+++ b/links.html
@@ -21,7 +21,7 @@
     <div class="banner">
 
         <div id="cad-logo" href="#">
-            <picture >
+            <picture>
                 <source media="(max-width: 510px)" srcset="./images/DCCcad_fatecsp3D-vertical-reduzido.png"/>
                 <img id="img-responsive" src="./images/DCCcad_fatecsp3D-horizontal-reduzido.png" alt="DCC_CAD">
             </picture>
@@ -71,14 +71,20 @@
                         <p>Tutorial de instalação do Auto CAD</p>
                         <iframe src="https://www.youtube.com/embed/acZ2LRt5oGU" frameborder="0" width="520" height="315"></iframe>
                     </div><!-- class: video-cad -->
-                    <div class="autodesk">
+                    <div class="links-div-layout links-autodesk">
                         <a href="./autodesk_educacional.html" target="_blank"><img src="./images/AutoDesk.png" alt="Auto Desk" width="200" height="160"></a>
                     </div>
                 </div><!-- class: links -->
-                <div class="prefeituraSP">
-                    <h2>Sites para consulta da Prefeitura de São Paulo</h2>
+                <h2>Sites para consulta da Prefeitura de São Paulo</h2>
+                <div class="links-div-layout links-sites-prefeituraSP" style="display:flex;">
+                    <a href="#" target="_blank" style="padding-right:10px;"><img src="./images/GestaoUrbanaSPprefeituraDeSP.avif" alt="Auto Desk"></a>&nbsp;
+                    <a href="#" target="_blank" style="padding-left:25px;"><img src="./images/PrefeituraDaCidadeDeSP.avif" alt="Auto Desk"></a>
                 </div>
-
+                <h2>Site da Fatec São Paulo</h2>
+                <div class="links-div-layout links-sites-fatecSP" style="display:flex;">
+                    <a href="#" target="_blank" style="padding-right:10px;"><img src="./images/FatecSP.avif" alt="Auto Desk"></a>&nbsp;
+                    <a href="#" target="_blank" style="padding-left:25px;"><img src="./images/DepartamentoDeEdificiosFatecSP.avif" alt="Auto Desk"></a>
+                </div>
             </div><!-- class: section-center -->
         </section>
     </main>
