--- a/teachersWork.html
+++ b/teachersWork.html
@@ -75,7 +75,7 @@
                     Profº. José Francisco Toledo Melara
                 </button>
                 <button type="button" class="professores">
-                    Profª. Me. Ieda Maria Nolla
+                    Profª. Dra./Me. Ieda Maria Nolla
                 </button>
                 <button type="button" class="professores">
                     Profª. Me. Helena Maria Barão Pereira de Mello
