--- a/reservas.html
+++ b/reservas.html
@@ -63,7 +63,7 @@
 <main>
     <section class="conteudo-main">
         <div class="section-center">
-            <form class="reserva-cad" name="Reserva-Laboratorio" action="https://formsubmit.co/dcccad@gmail.com" method="POST">
+            <form class="reserva-cad" name="Reserva-Laboratorio" action="https://formsubmit.co/f04c9c5f664b2baed350120eb3393528" method="POST">
                 <h2 class="titulo-informativo">Reversa Laboratorio</h2>
                 <label for="curso">Curso/Disciplina *</label>
                 <input type="text" name="Curso_Disciplina" id="curso" placeholder="Ex: Desenhos de Construção Civil" required>
@@ -245,3 +245,4 @@
  </body>
 
 </html>
+
