--- a/autodesk_educacional.html
+++ b/autodesk_educacional.html
@@ -109,9 +109,9 @@
                         <br/>
                         CEP 01124-060
                         <br/>
-                        Email: edificio@fatecsp.br
+                        Email: f002acad@cps.sp.gov.br
                         <br/>
-                        Telefone: (11) 3322-2200 - FATEC SP
+                        Telefone: (11) 3322-2249 - FATEC SP
                     </p> <!-- class: p-footer -->
                 </div> <!-- class: footer-col -->
                 
@@ -122,7 +122,7 @@
                         <br/>
                         Contato: iedamaria@fatecsp.br
                         <br/>
-                        Telefone: (11) 3322-2273
+                        Telefone: (11) 3322-2200
                         <br/>
                         Fatec SP Bloco B - 2° Andar
                         <br/>
@@ -136,7 +136,7 @@
                     <p class="p-footer">
                         Localizado: Terréo (Bloco A e B) 
                             <br/>
-                        Email: edificio@fatecsp.br
+                        Email: coord.edificios@fatecsp.br
                             <br/>
                         Telefone: (11) 3322-2278
                     </p> <!-- class: p-footer -->
@@ -197,4 +197,5 @@
     <script type="text/javascript" src="./scripts/carrossel-section.js"></script>
     <script type="text/javascript" src="./scripts/submit-forms.js"></script>
  </body>
+
 </html>
