--- a/calendario.html
+++ b/calendario.html
@@ -97,9 +97,9 @@
                         <br/>
                         CEP 01124-060
                         <br/>
-                        Email: edificio@fatecsp.br
+                        Email: f002acad@cps.sp.gov.br
                         <br/>
-                        Telefone: (11) 3322-2200 - FATEC SP
+                        Telefone: (11) 3322-2249 - FATEC SP
                     </p> <!-- class: p-footer -->
                 </div> <!-- class: footer-col -->
                 
@@ -110,7 +110,7 @@
                         <br/>
                         Contato: iedamaria@fatecsp.br
                         <br/>
-                        Telefone: (11) 3322-2273
+                        Telefone: (11) 3322-2200
                         <br/>
                         Fatec SP Bloco B - 2° Andar
                         <br/>
@@ -124,7 +124,7 @@
                     <p class="p-footer">
                         Localizado: Terréo (Bloco A e B) 
                             <br/>
-                        Email: edificio@fatecsp.br
+                        Email: coord.edificios@fatecsp.br
                             <br/>
                         Telefone: (11) 3322-2278
                     </p> <!-- class: p-footer -->
@@ -156,7 +156,7 @@
                 </div> <!-- class: footer-col -->
             </div><!-- class: display-footer3 -->
 
-            <div class="footer-col" id="footer-desenvolvedores2">
+            <div class="footer-col2" id="footer-desenvolvedores2">
                 <h2 class="h2-footer"><b>Desenvolvedores</b></h2>
                 <p class="p-footer">
 
@@ -185,4 +185,5 @@
     <script type="text/javascript" src="./scripts/carrossel-section.js"></script>
     <script type="text/javascript" src="./scripts/submit-forms.js"></script>
  </body>
+
 </html>
