Grade horaria removida - reservas.html

--- a/reservas.html
+++ b/reservas.html
@@ -129,10 +129,7 @@ Para a utilização de programas adicionais, é obrigatório que o docente respo
 
         </div>
     </section>
-    <div class="grade-lab">
-        <br />
-        <img src="./images/gradeAulas2024.jpg" alt="Grade do Laboratório" id="gradeAula">
-    </div>
+    <!--<div class="grade-lab">        <br />        <img src="./images/gradeAulas2024.jpg" alt="Grade do Laboratório" id="gradeAula">    </div>-->
 </main>
 
 
@@ -241,4 +238,5 @@ Para a utilização de programas adicionais, é obrigatório que o docente respo
  </body>
 
 </html>
+
 
