--- a/reservas.html
+++ b/reservas.html
@@ -103,7 +103,7 @@ Para a utilização de programas adicionais, é obrigatório que o docente respo
                     <br/>
                     <div class="grade-lab">
                         <br />        
-                        <img src="./images/normasLAB.jpg" alt="Normas do Laboratório">   
+                        <img src="./images/normasLAB.jpg" alt="Normas do Laboratório" width="99%">
                     </div>-->
                     <br/>
                     <br/>
@@ -132,7 +132,7 @@ Para a utilização de programas adicionais, é obrigatório que o docente respo
                     <p>&nbsp; O laboratório Enedina Capuano pertence ao departamento de Edifícios, que disponibiliza as grades horárias semestralmente. Desta forma, a reserva dos horários disponíveis deverá ser feita no início de cada semestre. *</p>
                 &NonBreakingSpace; <input type="checkbox" name="Ciente" id="ciente" required>
                 <label for="ciente"> <b>Ciente sobre as normas e avisos</b></label>
-                <br/>
+                <br /> <br />
                 <button type="submit" name="submit" id="btn-submit">Send</button>
                 <br />
             </form>
@@ -248,6 +248,7 @@ Para a utilização de programas adicionais, é obrigatório que o docente respo
  </body>
 
 </html>
+
 
 
 
