--- a/reservas.html
+++ b/reservas.html
@@ -104,7 +104,7 @@ Para a utilização de programas adicionais, é obrigatório que o docente respo
                     <div class="grade-lab">
                         <br />        
                         <img src="./images/normasLAB.jpg" alt="Normas do Laboratório" width="99%">
-                    </div>-->
+                    </div>
                     <br/>
                     <br/>
                 
@@ -248,6 +248,7 @@ Para a utilização de programas adicionais, é obrigatório que o docente respo
  </body>
 
 </html>
+
 
 
 
